--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,6 @@
 {
   "extends": "nx/presets/npm.json",
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "cli": {
     "packageManager": "pnpm"
   },
