chore: init ~ reinit nx install ~ reinit apps ~ init apps configs + init nestjs workspace-server

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -59,7 +59,10 @@
           "browserTarget": "workspace-ui:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/workspace-ui/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
