--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "org.openrichmedia.agamis.workspace",
   "version": "1.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve ",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
   "keywords": [],
   "author": "The Open Rich Media Initiative",
   "license": "Apache-2.0",
@@ -36,6 +44,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
+    "bootstrap": "^5.3.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
@@ -60,6 +69,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.0.0",
+    "bootstrap": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
