feat[5]:[ADD] des icones bruts dans la NavBar

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -21,7 +21,8 @@
         ],
         "styles": [
           "apps/workspace-ui/src/styles.sass",
-          "node_modules/bootstrap/dist/css/bootstrap.min.css"
+          "node_modules/bootstrap/dist/css/bootstrap.min.css",
+          "node_modules/font-awesome/css/font-awesome.min.css"
 
         ],
         "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.min.js"]
