chore[5]: Delete de bootstrap

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -20,12 +20,9 @@
           "apps/workspace-ui/src/assets"
         ],
         "styles": [
-          "apps/workspace-ui/src/styles.sass",
-          "node_modules/bootstrap/dist/css/bootstrap.min.css",
-          "node_modules/font-awesome/css/font-awesome.min.css"
-
+          "apps/workspace-ui/src/styles.sass"
         ],
-        "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.min.js"]
+        "scripts": []
       },
       "configurations": {
         "production": {
