feat[5]: Changement de la 2ème review - boostrap +sass

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -20,7 +20,9 @@
           "apps/workspace-ui/src/assets"
         ],
         "styles": [
-          "apps/workspace-ui/src/styles.sass"
+          "apps/workspace-ui/src/styles.sass",
+          "apps/workspace-ui/src/app/components/navBar/nav-bar.component.sass"
+
         ],
         "scripts": []
       },
