feat[5]:[UPDATE] Modif de la review + Fin NavBar Co-authored-by: Bvolpi

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -20,9 +20,7 @@
           "apps/workspace-ui/src/assets"
         ],
         "styles": [
-          "apps/workspace-ui/src/styles.sass",
-          "apps/workspace-ui/src/app/components/navBar/nav-bar.component.sass"
-
+          "apps/workspace-ui/src/styles.sass"
         ],
         "scripts": []
       },
