--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "17.2.6",
     "@nx/cypress": "17.2.6",
+    "@nx/eslint": "17.2.6",
     "@nx/eslint-plugin": "17.2.6",
     "@nx/jest": "17.2.6",
     "@nx/js": "17.2.6",
@@ -26,6 +27,8 @@
     "@nx/web": "17.2.6",
     "@nx/webpack": "17.2.6",
     "@schematics/angular": "17.0.8",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "6.15.0",
@@ -43,8 +46,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "@nx/eslint": "17.2.6"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@angular/animations": "17.0.8",
@@ -60,6 +62,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.0.0",
+    "normalize.css": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
