--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@angular-eslint/eslint-plugin": "17.0.1",
     "@angular-eslint/eslint-plugin-template": "17.0.1",
     "@angular-eslint/template-parser": "17.0.1",
-    "@angular/cli": "~17.0.0",
+    "@angular/cli": "17.0.8",
     "@angular/compiler-cli": "17.0.8",
     "@angular/language-service": "17.0.8",
     "@nestjs/schematics": "^10.0.1",
@@ -42,6 +42,7 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
+    "msw": "^2.0.11",
     "nx": "17.2.6",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
