feat[23]: login ui
- init msw + browser mock
- change pages dir location

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "npm.packageManager": "pnpm",
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "editor.tabSize": 2
 }
