--- a/apps/login-ui/project.json
+++ b/apps/login-ui/project.json
@@ -1,101 +1,114 @@
 {
-    "name": "login-ui",
-    "$schema": "../../node_modules/nx/schemas/project-schema.json",
-    "projectType": "application",
-    "prefix": "agamis-ws-login",
-    "sourceRoot": "apps/login-ui/src",
-    "tags": [],
-    "msw": {
-        "workerDirectory": "apps/login-ui/src"
-    },
-    "targets": {
-        "build": {
-            "executor": "@angular-devkit/build-angular:application",
-            "outputs": [
-                "{options.outputPath}"
-            ],
-            "options": {
-                "outputPath": "dist/apps/login-ui",
-                "index": "apps/login-ui/src/index.html",
-                "browser": "apps/login-ui/src/main.ts",
-                "polyfills": [
-                    "zone.js"
-                ],
-                "tsConfig": "apps/login-ui/tsconfig.app.json",
-                "assets": [
-                    "apps/login-ui/src/favicon.ico",
-                    "apps/login-ui/src/assets",
-                    "src/mockServiceWorker.js"
-                ],
-                "styles": [
-                    "node_modules/normalize.css/normalize.css",
-                    "apps/login-ui/src/styles.scss"
-                ],
-                "scripts": []
+  "name": "login-ui",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "projectType": "application",
+  "prefix": "agamis-ws-login",
+  "sourceRoot": "apps/login-ui/src",
+  "tags": [],
+  "targets": {
+    "build": {
+      "executor": "@angular-devkit/build-angular:application",
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "options": {
+        "outputPath": "dist/apps/login-ui",
+        "index": "apps/login-ui/src/index.html",
+        "browser": "apps/login-ui/src/main.ts",
+        "polyfills": [
+          "zone.js"
+        ],
+        "tsConfig": "apps/login-ui/tsconfig.app.json",
+        "assets": [
+          "apps/login-ui/src/favicon.ico",
+          "apps/login-ui/src/assets",
+          "apps/login-ui/src/mockServiceWorker.js"
+        ],
+        "styles": [
+          "node_modules/normalize.css/normalize.css",
+          "apps/login-ui/src/styles.scss"
+        ],
+        "scripts": []
+      },
+      "configurations": {
+        "production": {
+          "assets": [
+            "apps/login-ui/src/favicon.ico",
+            "apps/login-ui/src/assets"
+          ],
+          "budgets": [
+            {
+              "type": "initial",
+              "maximumWarning": "500kb",
+              "maximumError": "1mb"
             },
-            "configurations": {
-                "production": {
-                    "budgets": [
-                        {
-                            "type": "initial",
-                            "maximumWarning": "500kb",
-                            "maximumError": "1mb"
-                        },
-                        {
-                            "type": "anyComponentStyle",
-                            "maximumWarning": "2kb",
-                            "maximumError": "4kb"
-                        }
-                    ],
-                    "outputHashing": "all"
-                },
-                "development": {
-                    "optimization": false,
-                    "extractLicenses": false,
-                    "sourceMap": true
-                }
-            },
-            "defaultConfiguration": "production"
-        },
-        "serve": {
-            "executor": "@angular-devkit/build-angular:dev-server",
-            "configurations": {
-                "production": {
-                    "buildTarget": "login-ui:build:production"
-                },
-                "development": {
-                    "buildTarget": "login-ui:build:development"
-                }
-            },
-            "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-            "executor": "@angular-devkit/build-angular:extract-i18n",
-            "options": {
-                "buildTarget": "login-ui:build"
+            {
+              "type": "anyComponentStyle",
+              "maximumWarning": "2kb",
+              "maximumError": "4kb"
             }
-        },
-        "lint": {
-            "executor": "@nx/eslint:lint",
-            "outputs": [
-                "{options.outputFile}"
-            ]
-        },
-        "test": {
-            "executor": "@nx/jest:jest",
-            "outputs": [
-                "{workspaceRoot}/coverage/{projectRoot}"
-            ],
-            "options": {
-                "jestConfig": "apps/login-ui/jest.config.ts"
+          ],
+          "fileReplacements": [
+            {
+              "replace": "apps/login-ui/src/environments/environment.ts",
+              "with": "apps/login-ui/src/environments/environment.prod.ts"
             }
+          ],
+          "outputHashing": "all"
         },
-        "serve-static": {
-            "executor": "@nx/web:file-server",
-            "options": {
-                "buildTarget": "login-ui:build",
-                "staticFilePath": "dist/apps/login-ui/browser"
-            }
+        "development": {
+          "optimization": false,
+          "extractLicenses": false,
+          "sourceMap": true
         }
+      },
+      "defaultConfiguration": "production"
+    },
+    "serve": {
+      "executor": "@angular-devkit/build-angular:dev-server",
+      "configurations": {
+        "production": {
+          "buildTarget": "login-ui:build:production"
+        },
+        "development": {
+          "buildTarget": "login-ui:build:development"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
+    "extract-i18n": {
+      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "options": {
+        "buildTarget": "login-ui:build"
+      }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": [
+        "{options.outputFile}"
+      ]
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
+      "options": {
+        "jestConfig": "apps/login-ui/jest.config.ts"
+      },
+      "configurations": {
+        "with-coverage": {
+          "codeCoverage": true,
+          "coverageDirectory": "dist/apps/login-ui/tests/coverage"
+        }
+      }
+    },
+    "serve-static": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "login-ui:build",
+        "staticFilePath": "dist/apps/login-ui/browser"
+      }
     }
+  }
 }
