feat[23]: login ui
- implement output for loginDone event
- add orgId to local auth request
- fix css
- remove loading = false state for successful login
- changed to angular element (web component)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,9 +2,9 @@
   "configurations": [
     {
       "type": "chrome",
-      "name": "http://localhost:4200",
+      "name": "Debug 4201 (login UI - standalone)",
       "request": "launch",
-      "url": "http://localhost:4200"
+      "url": "http://localhost:4201"
     }
   ]
 }
