--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -2,24 +2,31 @@
   "name": "workspace-ui",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "agamis-ws",
   "sourceRoot": "apps/workspace-ui/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/workspace-ui",
         "index": "apps/workspace-ui/src/index.html",
         "main": "apps/workspace-ui/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/workspace-ui/tsconfig.app.json",
         "assets": [
           "apps/workspace-ui/src/favicon.ico",
           "apps/workspace-ui/src/assets"
         ],
-        "styles": ["apps/workspace-ui/src/styles.sass"],
+        "styles": [
+          "node_modules/normalize.css/normalize.css",
+          "apps/workspace-ui/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -72,11 +79,15 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "outputs": [
+        "{options.outputFile}"
+      ]
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/workspace-ui/jest.config.ts"
       }
