--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "The Open Rich Media Initiative",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@angular-architects/native-federation": "17.0.7",
     "@angular-devkit/build-angular": "17.0.8",
     "@angular-devkit/core": "17.0.8",
     "@angular-devkit/schematics": "17.0.8",
