--- a/apps/login-ui/project.json
+++ b/apps/login-ui/project.json
@@ -7,12 +7,11 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-architects/native-federation:build",
+      "executor": "@nx/angular:webpack-browser",
       "outputs": [
         "{options.outputPath}"
       ],
       "options": {
-        "target": "login-ui:build:development",
         "outputPath": "dist/apps/login-ui",
         "index": "apps/login-ui/src/index.html",
         "main": "apps/login-ui/src/main.ts",
@@ -20,6 +19,7 @@
           "zone.js"
         ],
         "tsConfig": "apps/login-ui/tsconfig.app.json",
+        "inlineStyleLanguage": "scss",
         "assets": [
           "apps/login-ui/src/favicon.ico",
           "apps/login-ui/src/assets",
@@ -29,14 +29,13 @@
           "node_modules/normalize.css/normalize.css",
           "apps/login-ui/src/styles.scss"
         ],
-        "scripts": []
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/login-ui/webpack.config.ts"
+        }
       },
       "configurations": {
         "production": {
-          "assets": [
-            "apps/login-ui/src/favicon.ico",
-            "apps/login-ui/src/assets"
-          ],
           "budgets": [
             {
               "type": "initial",
@@ -49,33 +48,39 @@
               "maximumError": "4kb"
             }
           ],
+          "outputHashing": "all",
           "fileReplacements": [
             {
               "replace": "apps/login-ui/src/environments/environment.ts",
               "with": "apps/login-ui/src/environments/environment.prod.ts"
             }
           ],
-          "outputHashing": "all"
+          "customWebpackConfig": {
+            "path": "apps/login-ui/webpack.prod.config.ts"
+          }
         },
         "development": {
           "buildOptimizer": false,
           "optimization": false,
+          "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "vendorChunk": true,
           "namedChunks": true
         }
       },
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nx/angular:dev-server",
+      "options": {
+        "port": 4201,
+        "publicHost": "http://localhost:4201"
+      },
       "configurations": {
         "production": {
           "buildTarget": "login-ui:build:production"
         },
         "development": {
-          "port": 4201,
           "buildTarget": "login-ui:build:development"
         }
       },
@@ -110,9 +115,19 @@
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
+      "defaultConfiguration": "production",
       "options": {
-        "buildTarget": "login-ui:build",
-        "staticFilePath": "dist/apps/login-ui/browser"
+        "buildTarget": "login:build",
+        "port": 4201,
+        "watch": false
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "login:build:development"
+        },
+        "production": {
+          "buildTarget": "login:build:production"
+        }
       }
     }
   }
