--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "@angular/language-service": "17.0.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "17.2.6",
-    "@nx/cypress": "17.2.6",
-    "@nx/eslint": "17.2.6",
-    "@nx/eslint-plugin": "17.2.6",
-    "@nx/jest": "17.2.6",
-    "@nx/js": "17.2.6",
-    "@nx/nest": "17.2.6",
-    "@nx/node": "17.2.6",
-    "@nx/web": "17.2.6",
-    "@nx/webpack": "17.2.6",
+    "@nx/angular": "17.2.7",
+    "@nx/cypress": "17.2.7",
+    "@nx/eslint": "17.2.7",
+    "@nx/eslint-plugin": "17.2.7",
+    "@nx/jest": "17.2.7",
+    "@nx/js": "17.2.7",
+    "@nx/nest": "17.2.7",
+    "@nx/node": "17.2.7",
+    "@nx/web": "17.2.7",
+    "@nx/webpack": "17.2.7",
     "@schematics/angular": "17.0.8",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "6.15.0",
@@ -44,7 +45,7 @@
     "jest-preset-angular": "13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "msw": "^2.0.11",
-    "nx": "17.2.6",
+    "nx": "17.2.7",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -64,6 +65,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.0.0",
+    "es-module-shims": "^1.5.12",
     "normalize.css": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
