feat[23]: login ui
- finalized integration to workspace's first steps

--- a/apps/login-ui/project.json
+++ b/apps/login-ui/project.json
@@ -117,16 +117,16 @@
       "executor": "@nx/web:file-server",
       "defaultConfiguration": "production",
       "options": {
-        "buildTarget": "login:build",
+        "buildTarget": "login-ui:build",
         "port": 4201,
         "watch": false
       },
       "configurations": {
         "development": {
-          "buildTarget": "login:build:development"
+          "buildTarget": "login-ui:build:development"
         },
         "production": {
-          "buildTarget": "login:build:production"
+          "buildTarget": "login-ui:build:production"
         }
       }
     }
