--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "The Open Rich Media Initiative",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@angular-architects/module-federation": "^17.0.1",
     "@angular-architects/native-federation": "17.0.7",
     "@angular-devkit/build-angular": "17.0.8",
     "@angular-devkit/core": "17.0.8",
@@ -49,7 +50,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "webpack": "link:@angular-architects/module-federation/webpack"
   },
   "dependencies": {
     "@angular/animations": "17.0.8",
