feat[23]: login ui
- finalized integration to workspace
- init msw for workspace-ui
- create mock for orgById + whoami
- add splashscreen for context init
- add context init
- determine login context from ws context

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
       "type": "chrome",
       "name": "Debug 4200 (Workspace UI)",
       "request": "launch",
-      "url": "http://localhost:4200"
+      "url": "http://localhost:4200/?orgId=e89c708f-462a-4d11-bf87-487f9fc01889"
     },
     {
       "type": "chrome",
