feat[23]: login ui
- decoupling and refactorizing shared modules, components, types

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,22 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@login-ui/*": ["apps/login-ui/src/*"],
-      "login-ui/Component": ["apps/login-ui/src/app/app.component.ts"],
-      "login-ui/Context": [
-        "apps/login-ui/src/app/core/services/models/context.ts"
-      ]
+      "@agamis/workspace/shared/common/angular": [
+        "libs/shared/common/angular/src/index.ts"
+      ],
+      "@agamis/workspace/shared/common/types": [
+        "libs/shared/common/types/src/index.ts"
+      ],
+      "@agamis/workspace/shared/login/types": [
+        "libs/shared/login/types/src/index.ts"
+      ],
+      "@agamis/workspace/shared/common/msw-handlers": [
+        "libs/shared/common/msw-handlers/src/index.ts"
+      ],
+      "@agamis/workspace/shared/login/msw-handlers": [
+        "libs/shared/login/msw-handlers/src/index.ts"
+      ],
+      "login-ui/Component": ["apps/login-ui/src/app/app.component.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
