--- a/apps/login-ui/tsconfig.editor.json
+++ b/apps/login-ui/tsconfig.editor.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../libs/workspace/feature-context/src/models/context.ts", "../../libs/workspace/feature-context/src/models/view-type.ts", "../../libs/shared/common/msw-handlers/src/lib/common/url-wrappers.ts"],
   "compilerOptions": {
     "types": ["jest", "node"]
   }
