--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
+    "verdaccio": "^5.0.4",
     "webpack": "link:@angular-architects/module-federation/webpack"
   },
   "dependencies": {
@@ -73,5 +74,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "0.14.2"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
