ci: gitlab CI update
- update ci yaml
- add Dockerfile for CI image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,62 @@
+workflow:
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_REF_NAME == "develop" || $CI_COMMIT_REF_NAME == "master"
+      when: always
+    - when: never
+
+stages:
+  - docker
+  - lint
+  - build
+  - test
+  - static-analysis
+
+variables:
+  GIT_DEPTH: 0
+  DOCKER_PATH: ./ci/docker/.
+  DOCKER_IMAGE: ${CI_REGISTRY_IMAGE}/agamis-workspace-ci:0124
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
+
+.distributed:
+  interruptible: true
+  cache:
+    key:
+      files:
+        - pnpm-lock.json
+    paths:
+      - .pnpm-store/
+      - .nx/
+  before_script:
+    - corepack enable
+    - corepack prepare pnpm@latest-8 --activate
+    - pnpm config set store-dir .pnpm-store
+    - pnpm install --frozen-lockfile
+    - (cd ./nx-custom && pnpm install --frozen-lockfile)
+    - NX_HEAD=$CI_COMMIT_SHA
+    - NX_BASE=${CI_MERGE_REQUEST_DIFF_BASE_SHA:-$CI_COMMIT_BEFORE_SHA}
+
+
+docker-prepare:
+  stage: docker
+  image: docker:24.0.5
+  services:
+    - name: docker:24.0.5-dind
+      alias: docker
+  interruptible: true
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker manifest inspect --insecure $DOCKER_IMAGE && (echo "Image already exists - no need to build" ; exit 0 ) || (docker build -t $DOCKER_IMAGE $DOCKER_PATH && docker push $DOCKER_IMAGE);
+
+lint:
+  stage: lint
+  image: $DOCKER_IMAGE
+  script:
+    - pnpm nx affected --base=$NX_BASE --head=$NX_HEAD -t lint --parallel=4
+
 sonarqube-check:
+  stage: static-analysis
   image: 
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
@@ -12,7 +70,3 @@ sonarqube-check:
   script: 
     - sonar-scanner
   allow_failure: true
-  only:
-    - master
-    - develop
-    - /^feat\/.*$/
