--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,14 +29,13 @@ variables:
       - .pnpm-store/
       - .nx/
   before_script:
+    - source /root/.bashrc
     - corepack enable
     - corepack prepare pnpm@latest-8 --activate
     - pnpm config set store-dir .pnpm-store
     - pnpm install --frozen-lockfile
-    - (cd ./nx-custom && pnpm install --frozen-lockfile)
     - NX_HEAD=$CI_COMMIT_SHA
     - NX_BASE=${CI_MERGE_REQUEST_DIFF_BASE_SHA:-$CI_COMMIT_BEFORE_SHA}
-
 
 docker-prepare:
   stage: docker
