--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ variables:
       - .pnpm-store/
       - .nx/
   before_script:
-    - source /root/.bashrc
+    - SHELL="$(which bash)" pnpm setup
     - corepack enable
     - corepack prepare pnpm@latest-8 --activate
     - pnpm config set store-dir .pnpm-store
