--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "org.openrichmedia.agamis.workspace",
   "version": "1.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve ",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+
+  "private": true,
   "keywords": [],
   "author": "The Open Rich Media Initiative",
   "license": "Apache-2.0",
@@ -34,6 +43,7 @@
     "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "cypress": "^13.0.0",
@@ -47,12 +57,12 @@
     "jsonc-eslint-parser": "^2.1.0",
     "msw": "^2.0.11",
     "nx": "17.2.7",
+    "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
-    "verdaccio": "^5.0.4",
-    "webpack": "link:@angular-architects/module-federation/webpack"
+    "verdaccio": "^5.0.4"
   },
   "dependencies": {
     "@angular/animations": "17.0.8",
@@ -73,9 +83,11 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "0.14.2"
   },
   "nx": {
     "includedScripts": []
   }
+
 }
