--- a/libs/shared/common/angular/.eslintrc.json
+++ b/libs/shared/common/angular/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "lib",
+            "prefix": "agamis-ws-lib",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "lib",
+            "prefix": "agamis-ws-lib",
             "style": "kebab-case"
           }
         ]
