feat[25]: adding otp page (WIP)
- otp page
- otp resend mechanism
- major fixes
- cleanup and ordering of files and libs to align with feat[5]

--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -71,7 +71,8 @@
           "buildTarget": "workspace-ui:build:production"
         },
         "development": {
-          "buildTarget": "workspace-ui:build:development"
+          "buildTarget": "workspace-ui:build:development",
+          "hmr": true
         }
       },
       "defaultConfiguration": "development"
