--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "6.15.0",
     "@typescript-eslint/parser": "6.15.0",
     "cypress": "^13.0.0",
@@ -73,6 +74,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "0.14.2"
   },
   "nx": {
