--- a/apps/login-ui/project.json
+++ b/apps/login-ui/project.json
@@ -8,16 +8,12 @@
   "targets": {
     "build": {
       "executor": "@nx/angular:webpack-browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/login-ui",
         "index": "apps/login-ui/src/index.html",
         "main": "apps/login-ui/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "apps/login-ui/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -94,15 +90,11 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": [
-        "{options.outputFile}"
-      ]
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/login-ui/jest.config.ts"
       },
@@ -127,6 +119,61 @@
         },
         "production": {
           "buildTarget": "login-ui:build:production"
+        }
+      }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/login-ui/.storybook",
+        "browserTarget": "login-ui:build-storybook",
+        "compodoc": false,
+        "styles": [
+          "node_modules/normalize.css/normalize.css",
+          "apps/login-ui/src/styles.scss"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/login-ui",
+        "configDir": "apps/login-ui/.storybook",
+        "browserTarget": "login-ui:build-storybook",
+        "compodoc": false,
+        "styles": [
+          "node_modules/normalize.css/normalize.css",
+          "apps/login-ui/src/styles.scss"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/login-ui/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "login-ui:build-storybook",
+        "staticFilePath": "dist/storybook/login-ui"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "login-ui:build-storybook:ci"
         }
       }
     }
