--- a/package.json
+++ b/package.json
@@ -23,12 +23,21 @@
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
     "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
+    "@nx/js": "18.0.3",
     "@nx/nest": "17.2.7",
     "@nx/node": "17.2.7",
-    "@nx/web": "17.2.7",
+    "@nx/storybook": "18.0.3",
+    "@nx/web": "18.0.3",
     "@nx/webpack": "17.2.7",
     "@schematics/angular": "17.0.8",
+    "@storybook/addon-essentials": "7.6.13",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-styling-webpack": "^0.0.6",
+    "@storybook/angular": "7.6.13",
+    "@storybook/core-server": "7.6.13",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -49,6 +58,9 @@
     "msw": "^2.0.11",
     "nx": "17.2.7",
     "prettier": "^2.6.2",
+    "storybook": "7.6.13",
+    "storybook-preset-inline-svg": "^1.0.1",
+    "svg-inline-loader": "^0.8.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
@@ -71,6 +83,8 @@
     "axios": "^1.0.0",
     "es-module-shims": "^1.5.12",
     "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
