chore: update sonar exclusions/inclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=agamis_workspace_AYy-U1zvOriG11SpETlf
 sonar.qualitygate.wait=true
-sonar.exclusions=**/mockServiceWorker.js
+sonar.exclusions=**/mockServiceWorker.js, **/*.spec.ts, **/*.stories.ts
+sonar.test.inclusions=**/*.spec.ts, **.*.cy.ts
