--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectKey=agamis_workspace_AYy-U1zvOriG11SpETlf
 sonar.qualitygate.wait=true
 sonar.exclusions=**/mockServiceWorker.js, **/*.spec.ts, **/*.stories.ts
+sonar.tests=**/src
 sonar.test.inclusions=**/*.spec.ts, **.*.cy.ts
+sonar.javascript.lcov.reportPaths=coverage/**/lcov.info
