--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "13.1.4",
+    "jest-sonar-reporter": "^2.0.0",
     "jsonc-eslint-parser": "^2.1.0",
     "msw": "^2.0.11",
     "nx": "17.2.7",
