--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,8 @@ test:
   stage: test
   extends: .distributed
   script:
-    - pnpm nx affected --base=$NX_BASE --head=$NX_HEAD -t test --ci --parallel=4
+    - pnpm nx affected --base=$NX_BASE --head=$NX_HEAD -t test --ci --configuration=ci --parallel=4
+    - node ci/scripts/merge-lcov.js
   artifacts:
     paths:
       - ./coverage
