--- a/apps/workspace-server/project.json
+++ b/apps/workspace-server/project.json
@@ -47,6 +47,14 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/workspace-server/jest.config.ts"
+      },
+      "configurations": {
+        "ci": {
+          "testResultsProcessor": "jest-sonar-reporter",
+          "coverageReporters": ["clover", "json", "lcov", "text", "text-summary"],
+          "collectCoverage": true,
+          "coverageDirectory": "{workspaceRoot}/coverage/{projectRoot}"
+        }
       }
     }
   },
