--- a/apps/workspace-ui/project.json
+++ b/apps/workspace-ui/project.json
@@ -92,6 +92,14 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/workspace-ui/jest.config.ts"
+      },
+      "configurations": {
+        "ci": {
+          "testResultsProcessor": "jest-sonar-reporter",
+          "coverageReporters": ["clover", "json", "lcov", "text", "text-summary"],
+          "collectCoverage": true,
+          "coverageDirectory": "{workspaceRoot}/coverage/{projectRoot}"
+        }
       }
     }
   }
