--- a/libs/shared/login/types/project.json
+++ b/libs/shared/login/types/project.json
@@ -27,6 +27,14 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/shared/login/types/jest.config.ts"
+      },
+      "configurations": {
+        "ci": {
+          "testResultsProcessor": "jest-sonar-reporter",
+          "coverageReporters": ["clover", "json", "lcov", "text", "text-summary"],
+          "collectCoverage": true,
+          "coverageDirectory": "{workspaceRoot}/coverage/{projectRoot}"
+        }
       }
     }
   },
