--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "glob": "^10.3.10",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
