chore: add sonar exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=agamis_workspace_AYy-U1zvOriG11SpETlf
 sonar.qualitygate.wait=true
-sonar.exclusions=**/mockServiceWorker.js, **/*.spec.ts, **/*.stories.ts
+sonar.exclusions=**/mockServiceWorker.js, **/*.spec.ts, **/*.stories.ts,ci/**,node_modules/**,coverage/**,cypress/**,dist/**,jest.config.js,jest.setup.js,jest.teardown,jest.preset.js,**/msw-handlers/**,**/mock/**
 sonar.test.inclusions=**/*.spec.ts, **.*.cy.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
