--- a/apps/login-ui/project.json
+++ b/apps/login-ui/project.json
@@ -96,7 +96,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/login-ui/jest.config.ts"
+        "jestConfig": "apps/login-ui/jest.config.ts",
+        "codeCoverage": true
       },
       "configurations": {
         "ci": {
